[package]
name = "ayame-rs"
version = "0.1.0"
authors = ["Nils Pukropp <nils.pukropp@outlook.de>"]
edition = "2018"


[dependencies]
serde-xml-rs = "^0"
tracing = "^0"
tracing-subscriber = "^0"
ytd-rs = { version ="^0", features = ["yt-dlp"] }
lazy_static = "^1"
regex = "1"
toml = "^0"
fs_extra = "^1"
tokio = { version = "^1", features = ["full", "time"] }
tokio-stream = "^0"
strum_macros = "^0"
strum = { version = "^0", features = ["derive"] }
serde = "^1"
serde_json = "^1"
image = "^0"
rand = "^0"
chrono = "^0"
humantime = "^2"
async-trait = "^0"
reqwest = "^0"
html-escape = "^0"
url = "^2"
uwuify = "^0"
poise = { git = "https://github.com/nirusu99/poise", branch = "develop", features = ["collector"] }
mensa-swfr-rs = {git = "https://github.com/Nirusu99/mensa-swfr-rs", branch = "main"}
itertools = "^0"
once_cell = "^1"
thiserror = "^1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = [
    "cache",
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
    "voice",
    "collector"
    ]

[dependencies.songbird]
version = "^0"
features = ["gateway", "builtin-queue", "serenity-native", "driver", "yt-dlp" ]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
