[package]
name = "ayame-rs"
version = "0.1.0"
authors = ["Nils Pukropp <nils.pukropp@outlook.de>"]
edition = "2021"


[dependencies]
tracing = "^0"
tracing-subscriber = "^0"
ytd-rs = { version ="^0", features = ["yt-dlp"] }
regex = "1"
tokio = { version = "^1", features = ["full", "time"] }
tokio-stream = "^0"
serde = "^1"
chrono = "^0"
uwuify = "^0"
poise = { git = "https://github.com/kangalioo/poise", branch = "master", features = ["collector"] }
mensa-swfr-rs = {git = "https://github.com/Nirusu99/mensa-swfr-rs", branch = "main"}
thiserror = "^1"
figment = { version = "0.10.6", features = ["toml", "json", "env"] }
signal-hook = "0.3.14"
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
