[package]
name = "ayame-rs"
version = "0.1.0"
authors = ["Nils Pukropp <nils.pukropp@outlook.de>"]
edition = "2021"


[dependencies]
ytd-rs = { version ="^0", features = ["yt-dlp"] }
regex = "1"
tokio = { version = "^1", features = ["full", "time"] }
tokio-stream = "^0"
serde = "^1"
chrono = "^0"
uwuify = "^0"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop", features = ["collector"] }
mensa-swfr-rs = {git = "https://github.com/Nirusu99/mensa-swfr-rs", branch = "main"}
thiserror = "^1"
figment = { version = "^0", features = ["toml", "json", "env"] }
signal-hook = "^0"
lazy_static = "^1"
tracing = { version = "^0"}
tracing-subscriber = {version = "^0", features = ["time"]}
time = {version = "^0", features = ["macros"]}

# [dependencies.serenity]
# default-features = false
# features = ["builder", "client", "gateway", "model", "utils", "collector"]
#
# version = "0.11.4"
